--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
 
     <div id="root"></div>
 
-    <footer class="container d-flex py-2 bg-blue">
+    <footer class="container d-flex text-white py-2">
       <p>
         All contents &copy; 2018
         <a href="https://www.linkedin.com/learning">LinkedIn Learning</a>. All
